--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -31,8 +31,8 @@
             </label>
 
             <ion-item class="input-costume" style="color:white;font-weight:600;">
-                <input type="radio" name="sex" checked ng-model="userInfo.sex" value='1'class="input-costume" style="color:white;font-weight:600;"/>男士&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <input type="radio" name="sex" ng-model="userInfo.sex" value='2' class="input-costume" style="color:white;font-weight:600;"/>女士
+                <label class="select-type" ng-model="userInfo.sex" ><input type="radio" name="sex" checked value='1' class="input-costume" style="color:white;font-weight:600;" />男士</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <label class="select-type" ng-model="userInfo.sex" ><input type="radio" name="sex" value='2' class="input-costume" style="color:white;font-weight:600;" />女士</label>
             </ion-item>
 
         </ion-list>
