--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -64,7 +64,7 @@
                     </button>
                 </div>
             </ion-list>
-            <button class="allbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
+            <button class="loginbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
             <button class="registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>
         </form>
     </ion-content>
