--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -11,18 +11,27 @@
 
     <ion-content>
             <ion-list>
-                <!--输入称呼和性别-->
-                <label class="item item-input input-costume">
+                <!--<div class="item item-input input-costume">
+                    <label class="input-label"><span class="input-label"><h2>称呼</h2></span></label>
+                    <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" style="color:white;" required>
+                    <label class="input-costume">
+                        <select style="background-color:darkcyan; float:right" ng-model="user.sex">
+                            <option value="1" ng-model="user.sex">先生</option>
+                            <option value="2" ng-model="user.sex">女士</option>
+                        </select>
+                    </label>
+                </div>-->
+                <!--<label class="item item-input input-costume">
                     <span class="input-label"><h2>称呼</h2></span>
                     <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" style="color:white;" required>
-                </label>
+                </label>-->
                 <label class="item item-input input-costume">
                     <span class="input-label"><h2>手机</h2></span>
                     <input type="text" name="mobile" ng-model='user.mobile' placeholder="请输入您要变更的手机号" style="color:white;" required>
                 </label>
                 <ion-item class="input-costume" style="color:#383641;">
-                    <input  type="radio" name="sex" checked ng-model="user.sex" value='1' />男士&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input  type="radio" name="sex" ng-model="user.sex" value='2' />女士
+                    <label class="select-type" ng-model="user.sex"><input type="radio" name="sex" checked ng-model="user.sex" value='1' />男士</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <label class="select-type" ng-model="user.sex"><input type="radio" name="sex" ng-model="user.sex" value='2' />女士</label>
                 </ion-item>
             </ion-list>
         <button class="allbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="saveMemberInfo()">保存</button>
