--- a/udqAutoApp/www/app/customer/member/recharge.html
+++ b/udqAutoApp/www/app/customer/member/recharge.html
@@ -10,9 +10,9 @@
             <ion-list class="input-costume">
                 <ion-item class="input-costume" style="color:#383641;">
                     <span class="span-black">请选择金额:</span>&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="radio" name="amount" checked ng-model="balance.amount" value='0.01' />0.01&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="radio" name="amount" ng-model="balance.amount" value='50' />50&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <input type="radio" name="amount" ng-model="balance.amount" value='100' />100
+                    <label class="select-type" ng-model="balance.amount"><input type="radio" name="amount" checked  value='0.02' />0.02</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <label class="select-type" ng-model="balance.amount"><input type="radio" name="amount" value='50' />50</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <label class="select-type" ng-model="balance.amount"><input type="radio" name="amount" value='100' />100</label>
                 </ion-item>
                 <ion-radio class="input-costume-radio" ng-model="balance.channel" value={{pay.name}} ng-repeat="pay in payMethod">
                     <img style="width:30px;height:30px;float:left" src="{{pay.imgUri}}" />
