--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -18,7 +18,7 @@
                 <p ng-show="user.mobile!=undefined">余额：<a class="a-custome">{{user.balance}}</a>&nbsp;&nbsp;&nbsp;<button class="rechargeInloginPage" ng-click="goToRecharge()">充值</button></p>
             </div>
             <div class="col col-20">
-                <button class="input-costume" ng-click="goToEditOwnerInfo()">
+                <button class="button-i" ng-click="goToEditOwnerInfo()">
                     <i class="icon ion-ios-arrow-forward" style="font-size:50px"></i>
                 </button>
             </div>
