ion-content 添加属性

--- a/udqAutoApp/www/app/customer/auto/districtSelect.html
+++ b/udqAutoApp/www/app/customer/auto/districtSelect.html
@@ -6,7 +6,7 @@
         </ion-nav-buttons>
 
     </ion-nav-bar>
-    <ion-content has-subheader="false">
+    <ion-content padding="true" class="has-header">
         <ion-refresher on-refresh="doRefreshOfDistrict()"></ion-refresher>
         <div style="text-align:center;margin-top:5px;" ng-show="autoInfo.selectedRegionId==undefined">
             <p>请先选择区域</p>
