--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -8,7 +8,7 @@
         </ion-nav-buttons>-->
     </ion-nav-bar>
 
-    <ion-content>
+    <ion-content padding="true" class="has-header">
         <ion-list>
             <ion-list class="input-costume">
                 <ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
