--- a/udqAutoApp/www/app/customer/order/regionSelect.html
+++ b/udqAutoApp/www/app/customer/order/regionSelect.html
@@ -6,7 +6,7 @@
         </ion-nav-buttons>
 
     </ion-nav-bar>
-    <ion-content has-subheader="false">
+    <ion-content padding="true" class="has-header">
         <ion-refresher on-refresh="doRefreshOfRegion()"></ion-refresher>
 
         <ion-list ng-repeat="district in districts">
