--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -6,7 +6,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-content>
+    <ion-content padding="true" class="has-header">
         <!-- 图片轮播 -->
         <ion-slide-box >
             <ion-slide>
