--- a/udqAutoApp/www/app/customer/auto/citySelect.html
+++ b/udqAutoApp/www/app/customer/auto/citySelect.html
@@ -6,7 +6,7 @@
         </ion-nav-buttons>
 
     </ion-nav-bar>
-    <ion-content has-subheader="false" class="input-costume">
+    <ion-content padding="true" class="has-header input-costume">
         <ion-refresher on-refresh="doRefreshOfCity()"></ion-refresher>
 
         <ion-list class="input-costume" ng-repeat="city in cities" >
