--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -9,7 +9,7 @@
         </ion-nav-buttons>-->
     </ion-nav-bar>
 
-    <ion-content>
+    <ion-content padding="true" class="has-header">
             <ion-list>
                 <!--输入称呼和性别-->
                 <label class="item item-input input-costume">
