--- a/udqAutoApp/www/app/customer/member/washShopInfo.html
+++ b/udqAutoApp/www/app/customer/member/washShopInfo.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goToCenter()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content>
+    <ion-content padding="true" class="has-header">
         <ion-list>
             <ion-item ng-repeat="shop in washShopInfo" class="input-costume">
                 <div class="row">
