--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfOrderList()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content>
+    <ion-content padding="true" class="has-header">
         <ion-list>
             <label class="item item-input input-costume">
                 <span class="input-label">状态</span>
