--- a/udqAutoApp/www/app/customer/order/recentlyOrder.html
+++ b/udqAutoApp/www/app/customer/order/recentlyOrder.html
@@ -1,5 +1,5 @@
 ﻿<ion-view title="我的订单" class="ion-view-costum">
-    <ion-content>
+    <ion-content padding="true" class="has-header">
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <ion-list>
             <ion-item ng-repeat="order in orderList" class="input-costume">
