--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -5,7 +5,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-content>
+    <ion-content padding="true" class="has-header">
 
         <ion-list>
             <label class="item item-input input-costume">
