--- a/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
+++ b/udqAutoApp/www/app/customer/washType/washTypeIntroduce.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfMain()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content has-subheader="false">
+    <ion-content padding="true" class="has-header">
 
         <ion-list>
             <ion-item ng-repeat="type in types" ng-click="goToTypeNote(type)" class="input-costume">
