--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -60,6 +60,6 @@
             </div>
 
         </ion-list>
-        <button class="allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="commitOrder()">提交订单</button>
+        <button class="button allbutton button-small" style="width:90%;margin-left:5%;" ng-click="commitOrder()">提交订单</button>
     </ion-content>
 </ion-view>
