--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -31,6 +31,6 @@
             </ion-radio>
         </ion-list>
         <div class="spacer" style="height:20px;"></div>-->
-            <button class="allbutton button-block button-small" ng-disabled="disabled" style="width:90%;margin-left:5%;" ng-click="commitOrder()">确定支付</button>
+            <button class="button allbutton button-block button-small" ng-disabled="disabled" style="width:90%;margin-left:5%;" ng-click="commitOrder()">确定支付</button>
     </ion-content>
 </ion-view>
