--- a/udqAutoApp/www/app/employee/order/photograph.html
+++ b/udqAutoApp/www/app/employee/order/photograph.html
@@ -55,7 +55,7 @@
         </div>
         <div class="spacer" style="height:5px;"></div>
         <div class="row">
-            <button class="allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="finish()">完成</button>
+            <button class="button allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="finish()">完成</button>
         </div>
         
 </ion-content>
