--- a/udqAutoApp/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd.html
@@ -67,7 +67,7 @@
                     <input type="text" name="color" ng-model="autoInfo.position" class="input-costume" placeholder="请输入车位(非必填)" style="color:white;font-weight:600;">
                 </label>
             </ion-list>
-            <button class="allbutton button-block button-small"  style="width:90%;margin-left:5%;" ng-click="addAuto()">确认</button>
+            <button class="button allbutton button-block button-small"  style="width:90%;margin-left:5%;" ng-click="addAuto()">确认</button>
         </form>
     </ion-content>
 </ion-view>
