--- a/udqAutoApp/www/app/customer/member/memberInfoEdit.html
+++ b/udqAutoApp/www/app/customer/member/memberInfoEdit.html
@@ -21,19 +21,20 @@
                         </select>
                     </label>
                 </div>-->
-                <!--<label class="item item-input input-costume">
+                <label class="item item-input input-costume">
                     <span class="input-label"><h2>称呼</h2></span>
                     <input type="text" name="name" ng-model='user.name' placeholder="请输入您的称呼" style="color:white;" required>
-                </label>-->
+                </label>
                 <label class="item item-input input-costume">
                     <span class="input-label"><h2>手机</h2></span>
                     <input type="text" name="mobile" ng-model='user.mobile' placeholder="请输入您要变更的手机号" style="color:white;" required>
                 </label>
                 <ion-item class="input-costume" style="color:#383641;">
-                    <label class="select-type" ng-model="user.sex"><input type="radio" name="sex" checked ng-model="user.sex" value='1' />男士</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <label class="select-type" ng-model="user.sex"><input type="radio" name="sex" ng-model="user.sex" value='2' />女士</label>
+                    <label class="select-type"><input type="radio" name="sex" ng-model="user.sex" value='1' />男士</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <label class="select-type"><input type="radio" name="sex" ng-model="user.sex" value='2' />女士</label>
                 </ion-item>
+                <!--<ion-radio ng-model="user.sex" value ="person.sexValue" ng-repeat="person in persons"></ion-radio>-->
             </ion-list>
-        <button class="allbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="saveMemberInfo()">保存</button>
+        <button class="button allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="saveMemberInfo()">保存</button>
     </ion-content>
 </ion-view>
