--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -19,7 +19,7 @@
                     <input id="verifyInput" type="tel" placeholder="请输入手机验证码" ng-model="userInfo.psd" style="color:white;font-weight:600;" class="input-costume">
                     
                 </label>
-                <button class="registerInloginPage button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                <button class="button registerInloginPage button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                     {{tips}}
                 </button>
                 
@@ -31,12 +31,12 @@
             </label>
 
             <ion-item class="input-costume" style="color:white;font-weight:600;">
-                <label class="select-type" ng-model="userInfo.sex" ><input type="radio" name="sex" checked value='1' class="input-costume" style="color:white;font-weight:600;" />男士</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <label class="select-type" ng-model="userInfo.sex" ><input type="radio" name="sex" value='2' class="input-costume" style="color:white;font-weight:600;" />女士</label>
+                <label class="select-type"><input type="radio" name="sex" ng-model="userInfo.sex" checked value='1' class="input-costume" style="color:white;font-weight:600;" />男士</label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <label class="select-type"><input type="radio" name="sex" ng-model="userInfo.sex" value='2' class="input-costume" style="color:white;font-weight:600;" />女士</label>
             </ion-item>
 
         </ion-list>
-        <button class="allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>
+        <button class="button allbutton button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>
 
     </ion-content>
 </ion-view>
