--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -46,6 +46,7 @@
             </ion-slide>
          </ion-slide-box>
 
+        <form>
             <ion-list>
                 <div class="spacer"style="height:10px;"></div>
                 <label class="item item-input input-costume">
@@ -58,13 +59,14 @@
                         <i class="icon ion-key placeholder-icon" style="color:white"></i>
                         <input type="tel" placeholder="请输入手机验证码" ng-model="user.psd" class="input-costume" style="color:white;font-weight:600;">
                     </label>
-                    <button class="registerInloginPage button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
+                    <button class="button registerInloginPage button-small" ng-disabled="verifyDisabled" style="width:120px;text-align:center;" ng-click="getValidateCode()">
                         {{tips}}
                     </button>
                 </div>
             </ion-list>
-            <button class="loginbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
-            <button class="registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>
+            <button class="button loginbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
+            <button class="button registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>
+        </form>
     </ion-content>
 
 </ion-view>
