--- a/udqAutoApp/www/app/customer/auto/autoInfo.html
+++ b/udqAutoApp/www/app/customer/auto/autoInfo.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfAutoInfo()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-list>
             <label class="item item-input input-costume">
                 <span class="input-label"><h2>车牌号</h2></span>
