--- a/udqAutoApp/www/app/customer/auto/autoMgr.html
+++ b/udqAutoApp/www/app/customer/auto/autoMgr.html
@@ -8,7 +8,7 @@
             <button class="button button-clear icon ion-plus-round" ng-click="goToAddauto()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-refresher on-refresh="doRefresh()"></ion-refresher>
         <div style="text-align:center;margin-top:5px;" ng-show="hasNoAuto">
             <p>暂无车辆,赶紧来添加吧</p>
