--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -31,7 +31,7 @@
                 <button class="button button-washauto-circle" ng-click="goToBookWash()">
                     <img src="image/iwantwash.png" style="vertical-align:central; height:100%; width:100%;" />
                 </button>
-                <p class="home-p">我要洗车</p>
+                <p class="home-p2">我要洗车</p>
             </div>
         </div>
         <div class="row row-top row-text-align">
