--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <button class="button button-clear" ng-click="exitCurrentUser()" style="color:#fafb75;font-weight:600;">注销</button>
+            <button class="button button-clear" ng-click="exitCurrentUser()" style="color:#FFF571;font-weight:600;">注销</button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
@@ -38,7 +38,7 @@
             <div class="col col-50 div-col-center" style="padding:0px 0px 0px 0px;">
                 <div class="div-col-innerdiv">
                     <button class="button ownbutton-circle" ng-click="goToAutoList()">
-                        <img src="image/iwantwash.png" style="vertical-align:central;height:100%; width:100%;" />
+                        <img src="image/myauto.png" style="vertical-align:central;height:100%; width:100%;" />
                     </button>
                     <p class="home-p">我的车辆</p>
                 </div>
