--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -4,7 +4,7 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackMain()"></button>
         </ion-nav-buttons>
         <!--<ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="commitOrder()" style="color:#fafb75;font-weight:600;">提交</button>
+            <button class="button-clear" ng-click="commitOrder()" style="color:#FFF571;font-weight:600;">提交</button>
         </ion-nav-buttons>-->
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
