--- a/udqAutoApp/www/app/employee/order/orderList.html
+++ b/udqAutoApp/www/app/employee/order/orderList.html
@@ -1,7 +1,7 @@
 ﻿<ion-view title="洗车店" class="ion-view-costum">
     <ion-nav-bar class="ion-nav-bar-costume" align-title="center">
         <ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="exitCurrentUser()" style="color:#fafb75;font-weight:600;">注销</button>
+            <button class="button-clear" ng-click="exitCurrentUser()" style="color:#FFF571;font-weight:600;">注销</button>
         </ion-nav-buttons>
     </ion-nav-bar>
     <!--订单展示-->
