--- a/udqAutoApp/www/app/customer/auto/districtSelect.html
+++ b/udqAutoApp/www/app/customer/auto/districtSelect.html
@@ -6,12 +6,12 @@
         </ion-nav-buttons>
 
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-refresher on-refresh="doRefreshOfDistrict()"></ion-refresher>
         <div style="text-align:center;margin-top:5px;" ng-show="autoInfo.selectedRegionId==undefined">
             <p>请先选择区域</p>
         </div>
-        <ion-list class="input-costume" ng-repeat="district in districts" ng-show="district.pid ==autoInfo.selectedDistrictPid" >
+        <ion-list ng-repeat="district in districts" ng-show="district.pid ==autoInfo.selectedDistrictPid" >
             <ion-radio ng-model="autoInfo.selectedDistrictId"  ng-click="goBackOfDistrictSelect()" value={{district.id}} class="input-costume-radio"><p style="color:#383641;">{{district.name}}</p></ion-radio>
         </ion-list>
 
