--- a/udqAutoApp/www/app/customer/member/recharge.html
+++ b/udqAutoApp/www/app/customer/member/recharge.html
@@ -5,7 +5,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-list>
             <ion-list class="input-costume">
                 <ion-item class="input-costume" style="color:#383641;">
