--- a/udqAutoApp/www/app/customer/member/washShopInfo.html
+++ b/udqAutoApp/www/app/customer/member/washShopInfo.html
@@ -4,9 +4,12 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goToCenter()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
+        <div style="text-align:center;margin-top:5px;" ng-show="hasNoAuto">
+            <p>未关联门店，请先添加车辆！</p>
+        </div>
         <ion-list>
-            <ion-item ng-repeat="shop in washShopInfo" class="input-costume">
+            <ion-item ng-repeat="shop in washShopInfo" class="input-costume-list">
                 <div class="row">
                     <div class="col col-20">
                         <!--<img src="image/mydianqu.png" style="height:100%;width:100%;" />-->
