--- a/udqAutoApp/www/app/customer/order/orderMgr.html
+++ b/udqAutoApp/www/app/customer/order/orderMgr.html
@@ -4,9 +4,9 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBackOfOrderList()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-list>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label">状态</span>
                 <i ng-show="selectOrder.state==0">未支付</i>
                 <i ng-show="selectOrder.state==1">已下单</i>
@@ -15,49 +15,49 @@
                 <i ng-show="selectOrder.state==2||selectOrder.state==3">洗车中</i>
                 <i ng-show="selectOrder.state==4||selectOrder.state==5">已完成</i>
             </label>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label">车牌号</span>
                 <i>{{selectOrder.autoPN}}</i>
             </label>
-            <label class="item item-input input-costume" ng-show="selectOrder.washerName != ''">
+            <label class="item item-input input-costume-list" ng-show="selectOrder.washerName != ''">
                 <span class="input-label">洗车工姓名</span>
-                <p>{{selectOrder.washerName}}</p>
+                <i>{{selectOrder.washerName}}</i>
             </label>
 
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label">下单时间</span>
-                <p>{{selectOrder.orderTime}}</p>
+                <i>{{selectOrder.orderTime}}</i>
             </label>
-            <label class="item item-input input-costume" ng-show="selectOrder.finishTime!=null">
+            <label class="item item-input input-costume-list" ng-show="selectOrder.finishTime!=null">
                 <span class="input-label">结束时间</span>
                 <i>{{selectOrder.finishTime}}</i>
             </label>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label">洗车类型</span>
                 <i>{{selectOrder.washTypeName}}</i>
             </label>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label">金额</span>
                 <a class="a-custome">{{selectOrder.finalAmount}}元</a>
             </label>
-            <label class="item item-input input-costume">
+            <label class="item item-input input-costume-list">
                 <span class="input-label">我的需求</span>
                 <i>{{selectOrder.userNote}}</i>
             </label>
-            <label class="item item-input input-costume" ng-show="selectOrder.customerGrade!=''">
+            <label class="item item-input input-costume-list" ng-show="selectOrder.customerGrade!=''">
                 <span class="input-label">评分</span>
                 <i>{{selectOrder.customerGrade}}</i>
             </label>
-            <label class="item item-input input-costume" ng-show="selectOrder.state==4||selectOrder.state==5">
+            <label class="item item-input input-costume-list" ng-show="selectOrder.state==4||selectOrder.state==5">
                 <span class="input-label">洗车工反馈</span>
                 <i>{{selectOrder.washerNote}}</i>
             </label>
-            <label class="item item-input input-costume" ng-show="selectOrder.gradeUserNote!=''">
+            <label class="item item-input input-costume-list" ng-show="selectOrder.gradeUserNote!=''">
                 <span class="input-label">意见</span>
                 <i>{{selectOrder.gradeUserNote}}</i>
             </label>
             <div ng-show="selectOrder.state==4||selectOrder.state==5">
-                <label class="item item-input input-costume">
+                <label class="item item-input input-costume-list">
                     <i>照片</i>
                 </label>
                 <div class="row" style="width:100%;margin:0px;padding:0px;">
@@ -91,7 +91,7 @@
                 <label title="1 stars" for="score-1">1 stars</label>
             </fieldset>
             <div class="col col-100 item item-input input-costume">
-                <textarea placeholder="您有什么意见，请写在这里。" ng-model="selectOrder.gradeUserNote" rows="5" class="input-costume" style="color:white;width:100%;height:inherit"></textarea>
+                <textarea placeholder="您有什么意见，请写在这里。" ng-model="selectOrder.gradeUserNote" rows="4" class="input-costume" style="color:white;width:100%;height:inherit"></textarea>
             </div>
             <button class="button allbutton  button-block button-small" ng-show="selectOrder.state==4" style="width:90%;margin-left:5%;" ng-click="judge(selectOrder)">确认</button>
         </div>
