--- a/udqAutoApp/www/app/customer/order/orderPay.html
+++ b/udqAutoApp/www/app/customer/order/orderPay.html
@@ -4,11 +4,11 @@
             <button class="button button-clear icon ion-ios-arrow-back" ng-click="goBack()"></button>
         </ion-nav-buttons>
         <!--<ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="commitOrder()" style="color:#fafb75;font-weight:600;">确定</button>
+            <button class="button-clear" ng-click="commitOrder()" style="color:#FFF571;font-weight:600;">确定</button>
         </ion-nav-buttons>-->
     </ion-nav-bar>
 
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-list>
             <ion-list class="input-costume">
                 <ion-radio class="input-costume-radio" ng-model="order.channel" value={{pay.name}} ng-repeat="pay in payMethod">
