--- a/udqAutoApp/www/app/customer/order/orderTime.html
+++ b/udqAutoApp/www/app/customer/order/orderTime.html
@@ -6,7 +6,7 @@
         </ion-nav-buttons>
 
     </ion-nav-bar>
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <ion-list>
             <label class="item item-input item-select">
                 <div class="input-label">请选择日期：</div>
