--- a/udqAutoApp/www/app/employee/order/acceptedOrder.html
+++ b/udqAutoApp/www/app/employee/order/acceptedOrder.html
@@ -6,7 +6,7 @@
                 <p>订单编号: {{order.orderNo}}</p>
                 <p>车牌：{{order.autoPN}}，金额：<span class="a-custome">{{order.finalAmount|currency:'￥'}}</span></p>
                 <p>洗车类型：{{order.washTypeName}}</p>
-
+                <p>下单时间：{{order.billTime}}</p>
                 <ion-option-button class="button-washstore-complete" ng-click="gotoPhotograph(order)">
                     确认完成
                 </ion-option-button>
