--- a/udqAutoApp/www/app/employee/order/newOrder.html
+++ b/udqAutoApp/www/app/employee/order/newOrder.html
@@ -6,7 +6,7 @@
                 <p>订单编号: {{order.orderNo}}</p>
                 <p>车牌：{{order.autoPN}}，金额：<span class="a-custome">{{order.finalAmount|currency:'￥'}}</span></p>
                 <p>洗车类型：{{order.washTypeName}}</p>
-
+                <p>下单时间：{{order.billTime}}</p>
                 <ion-option-button class="button-washstore-accept" ng-click="acceptOrder(order)">
                     接收订单
                 </ion-option-button>
