--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -6,7 +6,7 @@
         </ion-nav-buttons>
     </ion-nav-bar>
 
-    <ion-content padding="true" class="has-header">
+    <ion-content>
         <!-- 图片轮播 -->
         <ion-slide-box >
             <ion-slide>
@@ -49,10 +49,12 @@
         <form>
             <ion-list>
                 <div class="spacer"style="height:10px;"></div>
-                <label class="item item-input input-costume">
-                    <i class="icon ion-ios-telephone-outline placeholder-icon" style="color:white"></i>
-                    <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" class="input-costume" style="color:white;font-weight:600;" required>
-                </label>
+                <div class="item item-input-inset input-costume">
+                    <label class="item-input-wrapper input-costume">
+                        <i class="icon ion-ios-telephone-outline placeholder-icon" style="color:white"></i>
+                        <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.mobile" style="color:white;font-weight:600;" required>
+                    </label>
+                </div>
 
                 <div class="item item-input-inset input-costume">
                     <label class="item-input-wrapper input-costume">
@@ -64,8 +66,10 @@
                     </button>
                 </div>
             </ion-list>
+            <div class="spacer" style="height:20px;"></div>
+            <button ng-click="register()" style="color:white;background-color:#39A6FB;border:#39A6FB solid;float:right;margin-right:5%;">新用户注册&nbsp;&nbsp;<i class="icon ion-ios-arrow-forward"></i></button>
             <button class="button loginbutton  button-block button-small" style="width:90%;margin-left:5%;" ng-click="login()">登录</button>
-            <button class="button registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>
+            <!--<button class="button registerInloginPage  button-block button-small" style="width:90%;margin-left:5%;" ng-click="register()">注册</button>-->
         </form>
     </ion-content>
 
